--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,13 @@
 name: Build
 
-on:
+on: 
   pull_request:
-    types: 
-      - ready_for_review
-      - opened
-    branches:
-      - main
-      - dev
+    branches: [ "main" ]
     paths:
-      - icicle/**
-      - src/**
-      - Cargo.toml
-      - build.rs
-  push:
-    branches-ignore:
-      - main
-      - dev
-    paths:
-      - icicle/**
-      - src/**
-      - Cargo.toml
-      - build.rs
+      - "icicle/**"
+      - "src/**"
+      - "Cargo.toml"
+      - "build.rs"
 
 env:
   CARGO_TERM_COLOR: always
