--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,6 @@
 *.cubin
 *.bin
 *.fatbin
-*.so
-*.nsys-rep
-*.ncu-rep
 **/target
 **/.vscode
 **/.*lock*csv#
@@ -15,3 +12,5 @@
 **/.DS_Store
 **/Cargo.lock
 **/icicle/build/
+**/*.log
+**/*.*rep
