--- a/wrappers/rust/icicle-curves/icicle-bw6-761/Cargo.toml
+++ b/wrappers/rust/icicle-curves/icicle-bw6-761/Cargo.toml
@@ -28,4 +28,6 @@ icicle-bw6-761 = { path = ".", features = ["arkworks"] }
 [features]
 default = []
 g2 = ["icicle-bls12-377/bw6-761-g2"]
+ec_ntt = ["icicle-core/ec_ntt", "icicle-bls12-377/ec_ntt"]
+devmode = ["icicle-core/devmode", "icicle-bls12-377/devmode"]
 arkworks = ["ark-bw6-761", "icicle-core/arkworks", "icicle-bls12-377/arkworks"]
