--- a/wrappers/rust/Cargo.toml
+++ b/wrappers/rust/Cargo.toml
@@ -4,10 +4,10 @@ members = [
   "icicle-cuda-runtime",
   "icicle-core",
   "icicle-curves/icicle-bw6-761",
-  "icicle-curves/icicle-bls12-377",
-  "icicle-curves/icicle-bls12-381",
-  "icicle-curves/icicle-bn254",
-  "icicle-curves/icicle-grumpkin",
+  # "icicle-curves/icicle-bls12-377",
+  # "icicle-curves/icicle-bls12-381",
+  # "icicle-curves/icicle-bn254",
+  # "icicle-curves/icicle-grumpkin",
 ]
 exclude = [
   "icicle-curves/icicle-curve-template",
